# rules_cc_autoconf

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  autoconf.html  autoconf_hdr.html  autoconf_hdrs.html  autoconf_linkopts.html  autoconf_srcs.html  autoconf_toolchain.html  bison_config_new.h  bison_config_orig.h  changes.md  checks.html  clang_format.sh  defaults_verification.md  delta.txt  delta1.txt  dependency_graph_by_depth.md  diff.diff  do.sh  failing_tests_analysis.md  gnulib.html  gnulib_settings.html  graph.dot  index.html  level0_progress.md  macros.html  migration.html  module_dependency_levels.md  module_info.html  package_info.html  print.html  rules.html  (+8 more)
autoconf/: BUILD.bazel  autoconf.bzl  autoconf_hdr.bzl  autoconf_linkopts.bzl  autoconf_srcs.bzl  autoconf_toolchain.bzl  cc_autoconf_info.bzl  checks.bzl  defs.bzl  macros.bzl  module_info.bzl  package_info.bzl  providers.bzl
autoconf/macros/: BUILD.bazel
autoconf/macros/AC_CANONICAL_BUILD/: BUILD.bazel
autoconf/macros/AC_CANONICAL_HOST/: BUILD.bazel
autoconf/macros/AC_CHECK_DECLS_ONCE_ALARM/: BUILD.bazel
autoconf/macros/AC_CHECK_DECLS_ONCE_PUTENV/: BUILD.bazel
autoconf/macros/AC_CHECK_HEADER_STDBOOL/: BUILD.bazel
autoconf/macros/AC_CHECK_INCLUDES_DEFAULT/: BUILD.bazel
autoconf/macros/AC_CONFIG_AUX_DIR_DEFAULT/: BUILD.bazel
autoconf/macros/AC_C_BIGENDIAN/: BUILD.bazel
autoconf/macros/AC_C_FLEXIBLE_ARRAY_MEMBER/: BUILD.bazel
autoconf/macros/AC_C_INLINE/: BUILD.bazel  inline.bzl  inline_resolver.cc
autoconf/macros/AC_C_RESTRICT/: BUILD.bazel  restrict.bzl  restrict_resolver.cc
autoconf/macros/AC_FUNC_ALLOCA/: BUILD.bazel
autoconf/macros/AC_FUNC_CHOWN/: BUILD.bazel
autoconf/macros/AC_FUNC_FNMATCH/: BUILD.bazel
autoconf/macros/AC_FUNC_GETGROUPS/: BUILD.bazel
autoconf/macros/AC_FUNC_STRERROR_R/: BUILD.bazel
autoconf/macros/AC_FUNC_STRNLEN/: BUILD.bazel
autoconf/macros/AC_HEADER_MAJOR/: BUILD.bazel
autoconf/macros/AC_HEADER_STAT/: BUILD.bazel
autoconf/macros/AC_STRUCT_ST_BLOCKS/: BUILD.bazel
autoconf/macros/AC_STRUCT_TIMEZONE/: BUILD.bazel
autoconf/macros/AC_SYS_LARGEFILE/: BUILD.bazel
autoconf/macros/AC_SYS_LONG_FILE_NAMES/: BUILD.bazel
autoconf/macros/AC_SYS_POSIX_TERMIOS/: BUILD.bazel
autoconf/macros/AC_SYS_YEAR2038/: BUILD.bazel
autoconf/macros/AC_TYPE_GETGROUPS/: BUILD.bazel
autoconf/macros/AC_TYPE_MBSTATE_T/: BUILD.bazel
autoconf/macros/AC_TYPE_MODE_T/: BUILD.bazel
autoconf/macros/AC_TYPE_OFF_T/: BUILD.bazel
autoconf/macros/AC_TYPE_PID_T/: BUILD.bazel
autoconf/macros/AC_TYPE_SIZE_T/: BUILD.bazel
autoconf/macros/AC_TYPE_UID_T/: BUILD.bazel
autoconf/macros/AC_TYPE_UNSIGNED_LONG_LONG_INT/: BUILD.bazel
autoconf/macros/AC_USE_SYSTEM_EXTENSIONS/: BUILD.bazel
autoconf/private/: BUILD.bazel  ac_macros.bzl  autoconf_config.bzl  autoconf_library.bzl  autoconf_rule.bzl  check_info.bzl  condition_utils.bzl  cxxopts.bzl  providers.bzl  validate_checks.bzl
autoconf/private/autoconf/: BUILD.bazel  arg_parse.cc  arg_parse.h  check.cc  check_result.h  check_runner.cc  check_runner.h  compilation.cc  config.cc  config.h  debug_logger.h  main.cc  source_generator.cc  source_generator.h
autoconf/private/checker/: BUILD.bazel  check.cc  check.h  check_result.cc  check_result.h  check_runner.cc  check_runner.h  checker.cc  checker.h  checker_arg_parse.cc  checker_arg_parse.h  compilation.cc  condition_evaluator.cc  condition_evaluator.h  condition_evaluator_test.cc  config.cc  config.h  debug_logger.h  main.cc  system_header.cc  system_header.h  system_header_test.cc
autoconf/private/common/: BUILD.bazel  action_args.h  file_util.h
autoconf/private/json/: BUILD.bazel  json.h
autoconf/private/linkopts_gen/: BUILD.bazel  main.cc
autoconf/private/module_parser/: BUILD.bazel  main.cc
autoconf/private/resolver/: BUILD.bazel  main.cc  resolver.cc  resolver.h  resolver_arg_parse.cc  resolver_arg_parse.h  source_generator.cc  source_generator.h
autoconf/private/src_gen/: BUILD.bazel  main.cc
autoconf/private/tests/: BUILD.bazel  diff_test.bzl  diff_tester.py  gnu_autoconf_diff_test.bzl  gnu_autoconf_diff_tester.py
autoconf/tests/: BUILD.bazel  diff_test.bzl  diff_tester.py  gnu_autoconf_configure_test.bzl  gnu_autoconf_configure_tester.py  gnu_autoconf_diff_test.bzl
autoconf/tests/alignof/: test_alignof.c
autoconf/tests/compiler/: BUILD.bazel  config.h.in  test_compiler.c
autoconf/tests/compiler_capabilities/: BUILD.bazel  test_compiler_capabilities.c
autoconf/tests/compute/: BUILD.bazel  test_compute.c
autoconf/tests/conditions/: BUILD.bazel  configure.ac  test_conditions.c
autoconf/tests/custom/: test_custom.c
autoconf/tests/decls/: BUILD.bazel  test_decls.c
autoconf/tests/defines/: BUILD.bazel  test_defines.c
autoconf/tests/endian/: test_endian.c
autoconf/tests/file_based/: test_compile.c  test_file_based.c
autoconf/tests/functions/: BUILD.bazel  configure.ac  test_functions.c
autoconf/tests/gnulib_templates/: BUILD.bazel  gnulib_footer.h.in  gnulib_header.h.in  test_gnulib_templates.c
autoconf/tests/hdr/: test_hdr.c
autoconf/tests/headers/: BUILD.bazel  config.h.in  test_headers.c
autoconf/tests/inline_replace/: BUILD.bazel  test_inline_replace.c
autoconf/tests/libraries/: BUILD.bazel  test_libraries.c
autoconf/tests/members/: BUILD.bazel  test_members.c
autoconf/tests/module_parsing/: config.h.in
autoconf/tests/requires/: golden_config.h.in  test_requires.c
autoconf/tests/sizeof/: test_sizeof.c
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  gnulib.md  index.md  migration.md  rules.md
examples/simple/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  config.h.in  simple_test.c
gnulib/: BUILD.bazel  conditional_hdr.bzl  macros.bzl
gnulib/config/: BUILD.bazel  config.h.in
gnulib/settings/: BUILD.bazel  settings.bzl
gnulib/tests/: BUILD.bazel  config.h.in  deps.bzl  gnu_gnulib_diff_test_suite.bzl
gnulib/toolchain/: BUILD.bazel
tools/query/: BUILD.bazel  result_query.cc  result_query_aspect.bzl
(+12106 files in other folders)
