load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "autoconf_bzl",
    srcs = ["autoconf.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//autoconf/private:bzl_lib"],
)

bzl_library(
    name = "macros_bzl",
    srcs = ["macros.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//autoconf/private:bzl_lib"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":autoconf_bzl",
        ":macros_bzl",
    ],
)

exports_files([
    "autoconf.bzl",
    "macros.bzl",
    "defs.bzl",
])
