load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "autoconf_bzl",
    srcs = ["autoconf.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/private:bzl_lib",
    ],
)

bzl_library(
    name = "autoconf_hdr_bzl",
    srcs = ["autoconf_hdr.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/private:bzl_lib",
    ],
)

bzl_library(
    name = "autoconf_srcs_bzl",
    srcs = ["autoconf_srcs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/private:bzl_lib",
    ],
)

bzl_library(
    name = "cc_autoconf_info_bzl",
    srcs = ["cc_autoconf_info.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "macros_bzl",
    srcs = ["macros.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//autoconf/private:bzl_lib"],
)

bzl_library(
    name = "package_info_bzl",
    srcs = ["package_info.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/private:bzl_lib",
    ],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":autoconf_bzl",
        ":autoconf_hdr_bzl",
        ":autoconf_srcs_bzl",
        ":cc_autoconf_info_bzl",
        ":macros_bzl",
        ":package_info_bzl",
    ],
)

exports_files([
    "autoconf_hdr.bzl",
    "autoconf_srcs.bzl",
    "autoconf.bzl",
    "cc_autoconf_info.bzl",
    "defs.bzl",
    "macros.bzl",
    "package_info.bzl",
])
