load("@rules_venv//python:py_binary.bzl", "py_binary")

exports_files([
    "gnu_autoconf_configure_tester.py",
    "diff_tester.py",
])

py_binary(
    name = "diff_tester",
    srcs = ["diff_tester.py"],
    main = "diff_tester.py",
    visibility = [
        "//autoconf/tests:__subpackages__",
        "//gnulib/tests:__subpackages__",
    ],
    deps = ["@rules_venv//python/runfiles"],
)

py_binary(
    name = "gnu_autoconf_configure_tester",
    srcs = ["gnu_autoconf_configure_tester.py"],
    main = "gnu_autoconf_configure_tester.py",
    # Autoconf is not readily available on Windows.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = [
        "//autoconf/tests:__subpackages__",
        "//gnulib/tests:__subpackages__",
    ],
    deps = [
        ":diff_tester",
        "@rules_venv//python/runfiles",
    ],
)
