load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":settings.bzl",
    "foo",
)

exports_files([
    "settings.bzl",
])

bzl_library(
    name = "settings_bzl",
    srcs = ["settings.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//rules:common_settings",
    ],
)

foo()
