load("//autoconf:autoconf_toolchain.bzl", "autoconf_toolchain")

autoconf_toolchain(
    name = "gnulib_toolchain",
    visibility = ["//visibility:public"],
    deps = [
        "//gnulib/m4/arpa_inet_h:defaults",
        "//gnulib/m4/ctype_h:defaults",
        "//gnulib/m4/dirent_h:defaults",
        "//gnulib/m4/fcntl_h:defaults",
        "//gnulib/m4/fenv_h:defaults",
        "//gnulib/m4/fnmatch_h:defaults",
        "//gnulib/m4/glob_h:defaults",
        "//gnulib/m4/iconv_h:defaults",
        "//gnulib/m4/inttypes:defaults",
        "//gnulib/m4/langinfo_h:defaults",
        "//gnulib/m4/locale_h:defaults",
        "//gnulib/m4/malloc_h:defaults",
        "//gnulib/m4/math_h:defaults",
        "//gnulib/m4/mntent_h:defaults",
        "//gnulib/m4/monetary_h:defaults",
        "//gnulib/m4/netdb_h:defaults",
        "//gnulib/m4/poll_h:defaults",
        "//gnulib/m4/pthread_h:defaults",
        "//gnulib/m4/pty_h:defaults",
        "//gnulib/m4/sched_h:defaults",
        "//gnulib/m4/search_h:defaults",
        "//gnulib/m4/signal_h:defaults",
        "//gnulib/m4/spawn_h:defaults",
        "//gnulib/m4/stddef_h:defaults",
        "//gnulib/m4/stdio_h:defaults",
        "//gnulib/m4/stdlib_h:defaults",
        "//gnulib/m4/string_h:defaults",
        "//gnulib/m4/strings_h:defaults",
        "//gnulib/m4/sys_file_h:defaults",
        "//gnulib/m4/sys_ioctl_h:defaults",
        "//gnulib/m4/sys_random_h:defaults",
        "//gnulib/m4/sys_resource_h:defaults",
        "//gnulib/m4/sys_select_h:defaults",
        "//gnulib/m4/sys_socket_h:defaults",
        "//gnulib/m4/sys_stat_h:defaults",
        "//gnulib/m4/sys_time_h:defaults",
        "//gnulib/m4/sys_times_h:defaults",
        "//gnulib/m4/sys_types_h:defaults",
        "//gnulib/m4/sys_uio_h:defaults",
        "//gnulib/m4/sys_utsname_h:defaults",
        "//gnulib/m4/sys_wait_h:defaults",
        "//gnulib/m4/termios_h:defaults",
        "//gnulib/m4/threads_h:defaults",
        "//gnulib/m4/time_h:defaults",
        "//gnulib/m4/uchar_h:defaults",
        "//gnulib/m4/unicase_h:defaults",
        "//gnulib/m4/unictype_h:defaults",
        "//gnulib/m4/unimetadata_h:defaults",
        "//gnulib/m4/uninorm_h:defaults",
        "//gnulib/m4/unistd_h:defaults",
        "//gnulib/m4/utime_h:defaults",
        "//gnulib/m4/utmp_h:defaults",
        "//gnulib/m4/wchar_h:defaults",
        "//gnulib/m4/wctype_h:defaults",
    ],
)

toolchain(
    name = "toolchain",
    toolchain = ":gnulib_toolchain",
    toolchain_type = "//autoconf:toolchain_type",
    visibility = ["//visibility:public"],
)
