"""https://www.gnu.org/savannah-checkouts/gnu/autoconf/manual/autoconf-2.72/autoconf.html#index-AC_005fCANONICAL_005fBUILD-1"""

load("//autoconf:autoconf.bzl", "autoconf")

autoconf(
    name = "AC_CANONICAL_BUILD",
    checks = [
        # Build system type is determined at configure time
        # In Bazel, this is handled by the build system itself
        # We don't need to define anything here as Bazel provides
        # platform information through @platforms
    ],
    visibility = ["//visibility:public"],
)
