"""AC_CHECK_INCLUDES_DEFAULT - Autoconf builtin macro

Checks for standard C headers and defines STDC_HEADERS.

This is essentially what AC_HEADER_STDC does - it checks for standard
C89 headers and defines STDC_HEADERS if they're all available.

Defines:
  - HAVE_INTTYPES_H
  - HAVE_STDINT_H
  - HAVE_STDIO_H
  - HAVE_STDLIB_H
  - HAVE_STRINGS_H
  - HAVE_STRING_H
  - HAVE_SYS_STAT_H
  - HAVE_SYS_TYPES_H
  - HAVE_UNISTD_H
  - HAVE_WCHAR_H
  - STDC_HEADERS
"""

load("//autoconf:autoconf.bzl", "autoconf")
load("//autoconf:macros.bzl", "macros")

autoconf(
    name = "AC_CHECK_INCLUDES_DEFAULT",
    checks = [
        # Standard C headers checked by AC_CHECK_INCLUDES_DEFAULT
        macros.AC_CHECK_HEADER("inttypes.h"),
        macros.AC_CHECK_HEADER("stdint.h"),
        macros.AC_CHECK_HEADER("stdio.h"),
        macros.AC_CHECK_HEADER("stdlib.h"),
        macros.AC_CHECK_HEADER("strings.h"),
        macros.AC_CHECK_HEADER("string.h"),
        macros.AC_CHECK_HEADER("sys/stat.h"),
        macros.AC_CHECK_HEADER("sys/types.h"),
        macros.AC_CHECK_HEADER("unistd.h"),
        macros.AC_CHECK_HEADER("wchar.h"),
        # STDC_HEADERS is defined if standard C headers are available
        macros.AC_DEFINE("STDC_HEADERS", "1"),
    ],
    visibility = ["//visibility:public"],
)
