"""AC_FUNC_ALLOCA - Autoconf builtin macro

Checks for alloca() function and alloca.h header.

Defines:
  - HAVE_ALLOCA_H (if alloca.h exists)
  - C_ALLOCA (if using alloca.c replacement)
  - STACK_DIRECTION (stack growth direction)
"""

load("//autoconf:autoconf.bzl", "autoconf")
load("//autoconf:macros.bzl", "macros")

autoconf(
    name = "AC_FUNC_ALLOCA",
    checks = [
        # Check for alloca.h header
        macros.AC_CHECK_HEADER("alloca.h", define = "ac_cv_header_alloca_h"),
        # Define HAVE_ALLOCA_H in config.h if header exists
        macros.AC_DEFINE(
            "HAVE_ALLOCA_H",
            condition = "ac_cv_header_alloca_h",
            if_true = "1",
        ),
        # Check if alloca works (typically via compiler builtin)
        macros.AC_TRY_COMPILE(
            code = """#include <alloca.h>
int main(void) {
    void *p = alloca(1);
    (void)p;
    return 0;
}""",
            define = "ac_cv_func_alloca",
        ),
        # Define HAVE_ALLOCA in config.h if alloca works
        macros.AC_DEFINE(
            "HAVE_ALLOCA",
            condition = "ac_cv_func_alloca",
            if_true = "1",
        ),
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/macros/AC_CHECK_INCLUDES_DEFAULT",
    ],
)
