"""AC_FUNC_FNMATCH - Autoconf builtin macro

Checks for fnmatch function.

Defines:
  - HAVE_FNMATCH (if fnmatch function exists)
"""

load("//autoconf:autoconf.bzl", "autoconf")
load("//autoconf:checks.bzl", "checks")

autoconf(
    name = "AC_FUNC_FNMATCH",
    checks = [
        # Check for fnmatch function. Use default program (extern + main) so the
        # full program is generated; custom code was only "#include <fnmatch.h>"
        # which had no main() and caused the link to fail.
        checks.AC_CHECK_FUNC(
            "fnmatch",
            name = "ac_cv_func_fnmatch",
        ),
        # Define HAVE_FNMATCH if function exists
        checks.AC_DEFINE(
            "HAVE_FNMATCH",
            condition = "ac_cv_func_fnmatch",
            if_true = "1",
        ),
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/macros/AC_CHECK_INCLUDES_DEFAULT",
    ],
)
