"""AC_FUNC_GETGROUPS - Autoconf builtin macro

Checks if getgroups() works correctly.

Defines:
  - GETGROUPS_T (type of getgroups array argument)
"""

load("//autoconf:autoconf.bzl", "autoconf")
load("//autoconf:macros.bzl", "macros")

autoconf(
    name = "AC_FUNC_GETGROUPS",
    checks = [
        macros.AC_CHECK_FUNC("getgroups"),
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/macros/AC_CHECK_INCLUDES_DEFAULT",
        "//autoconf/macros/AC_TYPE_GETGROUPS",
    ],
)
